ensure visibility of form content

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 1em 0;
+    margin: 1em 0 0 0;
     background-color: #464c52;
 }
 
@@ -29,7 +29,7 @@ table td.right, table th.right{
 }
 
 .floating-form-buttons {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
@@ -84,4 +84,8 @@ table td.right, table th.right{
     top: 15px;
     right: 40px;
     font-size: 1.4rem;
+}
+
+.space-below {
+    margin-bottom: 85px;
 }
